--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>jQuery.getJSON demo</title>
+  <title>API Practice</title>
   <style>
-  img {
-    height: 100px;
-    float: left;
-  }
+      img {
+        height: 100px;
+        float: left;
+      }
   </style>
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 </head>
